examples/test/testpolicy14629.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14629
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key3: value33
      key6: value17
      key44: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value34
          key48: value43
          key20: value49
